# prompt-registry

./: README.md  pyproject.toml
prompt_registry/: __init__.py  cli.py  registry.py  template.py
prompt_registry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/: example.yaml  summarize.yaml
